--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -11,32 +11,19 @@
 .
 ..........................................................................
 
-CONFIG_ARCH_MXC=y
 CONFIG_ARCH_TEGRA=y
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-CONFIG_ARM64_PMEM=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_ARM_SCMI_CPUFREQ=y
 CONFIG_ARM_TEGRA186_CPUFREQ=y
-CONFIG_ACPI=y
-CONFIG_ACPI_APEI=y
-CONFIG_ACPI_APEI_GHES=y
-CONFIG_ACPI_APEI_MEMORY_FAILURE=y
-CONFIG_ACPI_APEI_EINJ=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -48,13 +35,8 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_CHACHA20_NEON=y
 CONFIG_CRYPTO_AES_ARM64_BS=y
-CONFIG_MODVERSIONS=y
-CONFIG_KSM=y
-CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_MEMORY_FAILURE=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_IP6_NF_TARGET_REJECT=m
-CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_CAN=m
 CONFIG_CAN_VCAN=m
 CONFIG_BT=m
@@ -78,8 +60,7 @@ CONFIG_PCIE_TEGRA194_HOST=m
 CONFIG_PCIE_TEGRA194_EP=m
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
-CONFIG_PCI_EPF_TEST=m
-CONFIG_FW_LOADER_USER_HELPER_FALLBACK=n
+CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_TEGRA_ACONNECT=m
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
@@ -93,23 +74,11 @@ CONFIG_MTD_PHYSMAP_OF=y
 CONFIG_MTD_DATAFLASH=y
 CONFIG_MTD_NAND_DENALI_DT=y
 CONFIG_MTD_SPI_NOR=y
-CONFIG_MTD_UBI=m
-CONFIG_ZRAM=m
-CONFIG_SRAM=y
-CONFIG_UACCE=m
-CONFIG_SKY2=y
 CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
 CONFIG_MDIO_BUS_MUX_MMIOREG=y
 CONFIG_USB_USBNET=m
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_MISC=y
-CONFIG_LEGACY_PTY_COUNT=16
-CONFIG_SERIAL_8250=y
-CONFIG_SERIAL_8250_CONSOLE=y
-CONFIG_SERIAL_8250_EXTENDED=y
-CONFIG_SERIAL_8250_SHARE_IRQ=y
-CONFIG_SERIAL_8250_DW=y
-CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_TEGRA=y
 CONFIG_SERIAL_TEGRA_TCU=y
 CONFIG_SERIAL_DEV_BUS=y
@@ -128,12 +97,11 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_TEGRA=y
 CONFIG_I2C_CROS_EC_TUNNEL=y
-CONFIG_HAS_IOMEM=y
 CONFIG_SPI=y
 CONFIG_SPI_MASTER=y
 CONFIG_SPI_MEM=y
-CONFIG_SPI_TEGRA114=m
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_TEGRA114=y
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_PPS_CLIENT_KTIMER=y
 CONFIG_PPS_CLIENT_LDISC=y
@@ -143,13 +111,12 @@ CONFIG_POWER_RESET_SYSCON=y
 CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
-CONFIG_SENSORS_LM90=m
-CONFIG_SENSORS_PWM_FAN=m
+CONFIG_SENSORS_LM90=y
+CONFIG_SENSORS_PWM_FAN=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
-CONFIG_THERMAL_EMULATION=y
 CONFIG_TEGRA_SOCTHERM=m
 CONFIG_TEGRA_BPMP_THERMAL=m
 CONFIG_ARM_SP805_WATCHDOG=y
@@ -158,10 +125,10 @@ CONFIG_DW_WATCHDOG=y
 CONFIG_ARM_SMC_WATCHDOG=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_GPIO=y
-CONFIG_RC_CORE=m
+CONFIG_RC_CORE=y
 CONFIG_RC_DECODERS=y
 CONFIG_RC_DEVICES=y
-CONFIG_MEDIA_SUPPORT=m
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
@@ -176,22 +143,22 @@ CONFIG_DRM_TEGRA=m
 CONFIG_FB=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_SIMPLE=y
-CONFIG_BACKLIGHT_PWM=m
-CONFIG_BACKLIGHT_LP855X=m
+CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_LP855X=y
 CONFIG_SOUND=y
 CONFIG_SND=y
-CONFIG_SND_ALOOP=m
-CONFIG_SND_HDA_TEGRA=m
-CONFIG_SND_HDA_CODEC_HDMI=m
+CONFIG_SND_ALOOP=y
+CONFIG_SND_HDA_TEGRA=y
+CONFIG_SND_HDA_CODEC_HDMI=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
-CONFIG_SND_SOC_TEGRA=m
-CONFIG_SND_SIMPLE_CARD=m
-CONFIG_SND_AUDIO_GRAPH_CARD=m
+CONFIG_SND_SOC_TEGRA=y
+CONFIG_SND_SIMPLE_CARD=y
+CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_HIDRAW=y
-CONFIG_HID_MULTITOUCH=m
-CONFIG_I2C_HID_ACPI=m
-CONFIG_I2C_HID_OF=m
+CONFIG_HID_MULTITOUCH=y
+CONFIG_I2C_HID_ACPI=y
+CONFIG_I2C_HID_OF=y
 CONFIG_USB_OTG=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_TEGRA=y
@@ -224,14 +191,13 @@ CONFIG_USB_CONFIGFS_EEM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_ACC=y
-CONFIG_TYPEC=m
-CONFIG_TYPEC_TCPM=m
-CONFIG_TYPEC_TCPCI=m
-CONFIG_TYPEC_UCSI=m
+CONFIG_TYPEC=y
+CONFIG_TYPEC_TCPM=y
+CONFIG_TYPEC_TCPCI=y
+CONFIG_TYPEC_UCSI=y
 CONFIG_UCSI_CCG=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_TEST=m
 CONFIG_MMC_ARMMMCI=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_ACPI=y
@@ -250,17 +216,9 @@ CONFIG_EDAC_GHES=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_TEGRA=y
 CONFIG_DMADEVICES=y
-CONFIG_FSL_EDMA=y
-CONFIG_IMX_SDMA=m
-CONFIG_ARM_IMX_BUS_DEVFREQ=m
-CONFIG_ARM_IMX8M_DDRC_DEVFREQ=m
 CONFIG_TEGRA186_GPC_DMA=y
 CONFIG_TEGRA20_APB_DMA=y
-CONFIG_TEGRA210_ADMA=m
-CONFIG_UIO=m
-CONFIG_VFIO=y
-CONFIG_VFIO_PCI=y
-CONFIG_VIRTIO_PCI=y
+CONFIG_TEGRA210_ADMA=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_ASHMEM=y
@@ -276,8 +234,6 @@ CONFIG_PLATFORM_MHU=y
 CONFIG_MEMORY=y
 CONFIG_TEGRA_MC=y
 CONFIG_IOMMU_SUPPORT=y
-CONFIG_VIRTUALIZATION=y
-CONFIG_KVM=y
 CONFIG_TEGRA_AHB=y
 CONFIG_TEGRA_IOMMU_SMMU=y
 CONFIG_ARM_SMMU=y
@@ -298,8 +254,6 @@ CONFIG_PWM=y
 CONFIG_PWM_TEGRA=m
 CONFIG_PHY_TEGRA_XUSB=y
 CONFIG_ARM_SMMU_V3_PMU=m
-CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_NVMEM_RMEM=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
@@ -307,34 +261,6 @@ CONFIG_MUX_MMIO=y
 CONFIG_HTE=y
 CONFIG_HTE_TEGRA194=y
 CONFIG_HTE_TEGRA194_TEST=m
-CONFIG_EXT3_FS_SECURITY=y
-CONFIG_FANOTIFY=y
-CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
-CONFIG_QUOTA=y
-CONFIG_QFMT_V2=m
-CONFIG_ISO9660_FS=y
-CONFIG_NTFS_FS=y
-CONFIG_HUGETLBFS=y
-CONFIG_SQUASHFS=y
-CONFIG_SQUASHFS_LZO=y
-CONFIG_SQUASHFS_XZ=y
-CONFIG_PSTORE_CONSOLE=y
-CONFIG_PSTORE_RAM=m
-CONFIG_PSTORE_BLK=y
-CONFIG_NFS_V3_ACL=y
-CONFIG_NFS_V4_1=y
-CONFIG_NFS_V4_2=y
-CONFIG_NFSD=m
-CONFIG_NFSD_V3_ACL=y
-CONFIG_SECURITY_DMESG_RESTRICT=y
-CONFIG_SECURITY_NETWORK=y
-CONFIG_HARDENED_USERCOPY=y
-CONFIG_FORTIFY_SOURCE=y
-CONFIG_SECURITY_YAMA=y
-CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,selinux,bpf"
-CONFIG_CRYPTO_LZO=m
-CONFIG_CRYPTO_ANSI_CPRNG=y
-CONFIG_CRYPTO_DEV_CCREE=m
 CONFIG_CMA=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_DMA_RESTRICTED_POOL=y
@@ -344,13 +270,7 @@ CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_DMA_CMA=y
 CONFIG_DMA_PERNUMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=32
-CONFIG_PRINTK_TIME=y
-CONFIG_PANIC_ON_OOPS=y
-CONFIG_SCHEDSTATS=y
-CONFIG_MEMTEST=y
-CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
-CONFIG_LOCALVERSION_AUTO=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
@@ -363,33 +283,8 @@ CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=m
 CONFIG_MMU_NOTIFIER=y
-CONFIG_NVME_CORE=m
-CONFIG_BLK_DEV_NVME=m
-CONFIG_NVME_FABRICS=m
-CONFIG_NVME_TCP=m
-CONFIG_NVME_TARGET=m
-CONFIG_NVME_TARGET_TCP=m
-CONFIG_SENSORS_INA2XX=m
-CONFIG_SENSORS_INA3221=m
-CONFIG_IIO_KFIFO_BUF=y
-CONFIG_IIO_BUFFER=y
+CONFIG_SENSORS_INA2XX=y
+CONFIG_SENSORS_INA3221=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
-# CONFIG_WERROR is not set
-# CONFIG_SCHED_DEBUG is not set
-# CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-# CONFIG_COMPAT_BRK is not set
-# CONFIG_DRM_EXYNOS_DP is not set
-# CONFIG_DRM_NOUVEAU is not set
-# CONFIG_DRM_VIRTIO_GPU is not set
-# CONFIG_DVB_NET is not set
-# CONFIG_SERIO_SERPORT is not set
-# CONFIG_BRCMFMAC_SDIO is not set
-# CONFIG_SCSI_PROC_FS is not set
-# CONFIG_EFI_VARS_PSTORE is not set
-# CONFIG_BT_LE is not set
-# CONFIG_BT_DEBUGFS is not set
-# CONFIG_DEBUG_PREEMPT is not set
-# CONFIG_FUNCTION_GRAPH_TRACER is not set
-# CONFIG_DYNAMIC_FTRACE is not set
-# CONFIG_MODULE_SIG_ALL is not set
+CONFIG_THERMAL=y
