--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -100,7 +100,7 @@ CONFIG_I2C_CROS_EC_TUNNEL=y
 CONFIG_SPI=y
 CONFIG_SPI_MASTER=y
 CONFIG_SPI_MEM=y
-CONFIG_SPI_TEGRA114=y
+CONFIG_SPI_TEGRA114=m
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
 CONFIG_PPS_CLIENT_KTIMER=y
@@ -111,8 +111,8 @@ CONFIG_POWER_RESET_SYSCON=y
 CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
-CONFIG_SENSORS_LM90=y
-CONFIG_SENSORS_PWM_FAN=y
+CONFIG_SENSORS_LM90=m
+CONFIG_SENSORS_PWM_FAN=m
 CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
@@ -255,6 +255,7 @@ CONFIG_PWM_TEGRA=m
 CONFIG_PHY_TEGRA_XUSB=y
 CONFIG_ARM_SMMU_V3_PMU=m
 CONFIG_NVMEM_RMEM=m
+CONFIG_BLK_DEV_NVME=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
 CONFIG_MUX_MMIO=y
@@ -284,7 +285,11 @@ CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=m
 CONFIG_MMU_NOTIFIER=y
 CONFIG_SENSORS_INA2XX=y
-CONFIG_SENSORS_INA3221=y
+CONFIG_SENSORS_INA3221=m
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_THERMAL=y
+CONFIG_ARM64_PMEM=y
+CONFIG_ARCH_HAS_PMEM_API=y
+CONFIG_IIO_BUFFER=y
+CONFIG_IIO_KFIFO_BUF=y
