--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -16,13 +16,13 @@ CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 CONFIG_ENERGY_MODEL=y
+CONFIG_CPU_IDLE=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPUFREQ_DT=y
-CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_ARM_TEGRA186_CPUFREQ=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
@@ -53,14 +53,12 @@ CONFIG_PCIE_ECRC=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_PASID=y
 CONFIG_HOTPLUG_PCI=y
-CONFIG_HOTPLUG_PCI_ACPI=y
 CONFIG_PCI_TEGRA=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PCIE_TEGRA194_HOST=m
 CONFIG_PCIE_TEGRA194_EP=m
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
-CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_TEGRA_ACONNECT=m
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
@@ -74,8 +72,9 @@ CONFIG_MTD_PHYSMAP_OF=y
 CONFIG_MTD_DATAFLASH=y
 CONFIG_MTD_NAND_DENALI_DT=y
 CONFIG_MTD_SPI_NOR=y
-CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
-CONFIG_MDIO_BUS_MUX_MMIOREG=y
+CONFIG_MTD_RAW_NAND=y
+CONFIG_MDIO_BUS_MUX_MULTIPLEXER=m
+CONFIG_MDIO_BUS_MUX_MMIOREG=m
 CONFIG_USB_USBNET=m
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_INPUT_MISC=y
@@ -97,6 +96,8 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_TEGRA=y
 CONFIG_I2C_CROS_EC_TUNNEL=y
+CONFIG_CROS_EC=y
+CONFIG_CHROME_PLATFORMS=y
 CONFIG_SPI=y
 CONFIG_SPI_MASTER=y
 CONFIG_SPI_MEM=y
@@ -143,6 +144,7 @@ CONFIG_DRM_TEGRA=m
 CONFIG_FB=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_SIMPLE=y
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_SOUND=y
@@ -157,7 +159,6 @@ CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_HIDRAW=y
 CONFIG_HID_MULTITOUCH=y
-CONFIG_I2C_HID_ACPI=y
 CONFIG_I2C_HID_OF=y
 CONFIG_USB_OTG=y
 CONFIG_USB_XHCI_HCD=y
@@ -200,7 +201,6 @@ CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_ARMMMCI=y
 CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_ACPI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_TEGRA=y
 CONFIG_MMC_SPI=y
@@ -212,7 +212,6 @@ CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
 CONFIG_EDAC=y
-CONFIG_EDAC_GHES=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_TEGRA=y
 CONFIG_DMADEVICES=y
@@ -221,7 +220,6 @@ CONFIG_TEGRA20_APB_DMA=y
 CONFIG_TEGRA210_ADMA=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
-CONFIG_ASHMEM=y
 CONFIG_TEGRA_EPL=y
 CONFIG_TEGRA_HSIERRRPTINJ=y
 CONFIG_COMMON_CLK_SCMI=y
@@ -246,19 +244,17 @@ CONFIG_ARCH_TEGRA_210_SOC=y
 CONFIG_ARCH_TEGRA_186_SOC=y
 CONFIG_ARCH_TEGRA_194_SOC=y
 CONFIG_ARCH_TEGRA_234_SOC=y
-CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_EXTCON_USBC_CROS_EC=y
 CONFIG_IIO=y
 CONFIG_PWM=y
 CONFIG_PWM_TEGRA=m
 CONFIG_PHY_TEGRA_XUSB=y
-CONFIG_ARM_SMMU_V3_PMU=m
 CONFIG_NVMEM_RMEM=m
 CONFIG_BLK_DEV_NVME=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
-CONFIG_MUX_MMIO=y
+CONFIG_MUX_MMIO=m
 CONFIG_HTE=y
 CONFIG_HTE_TEGRA194=y
 CONFIG_HTE_TEGRA194_TEST=m
