--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -289,3 +289,43 @@ CONFIG_ARM64_PMEM=y
 CONFIG_ARCH_HAS_PMEM_API=y
 CONFIG_IIO_BUFFER=y
 CONFIG_IIO_KFIFO_BUF=y
+CONFIG_ARCH_MXC=y
+CONFIG_ARM64_PMEM=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_ARM_SCMI_CPUFREQ=y
+CONFIG_ACPI=y
+CONFIG_ACPI_APEI=y
+CONFIG_ACPI_APEI_GHES=y
+CONFIG_ACPI_APEI_MEMORY_FAILURE=y
+CONFIG_ACPI_APEI_EINJ=y
+CONFIG_MODVERSIONS=y
+CONFIG_KSM=y
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
+CONFIG_IP6_NF_TARGET_REJECT=m
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_PCI_EPF_TEST=m
+CONFIG_MTD_UBI=m
+CONFIG_ZRAM=m
+CONFIG_SRAM=y
+CONFIG_UACCE=m
+CONFIG_SKY2=y
+CONFIG_LEGACY_PTY_COUNT=16
+CONFIG_SERIAL_8250=y
+CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_SERIAL_8250_EXTENDED=y
+CONFIG_SERIAL_8250_SHARE_IRQ=y
+CONFIG_SERIAL_8250_DW=y
+CONFIG_SERIAL_OF_PLATFORM=y
+CONFIG_HAS_IOMEM=y
+CONFIG_THERMAL_EMULATION=y
+CONFIG_MMC_TEST=m
+CONFIG_UIO=m
+CONFIG_VFIO=y
+CONFIG_VFIO_PCI=y
+CONFIG_VIRTIO_PCI=y
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
