nvidia-orin: fix bootup kernel call trace

--- a/bsp/nvidia-orin/nvidia-orin-preempt-rt.cfg
+++ b/bsp/nvidia-orin/nvidia-orin-preempt-rt.cfg
@@ -20,3 +20,5 @@ CONFIG_NAMESPACES=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_TIMES is not set
 # CONFIG_FAIR_GROUP_SCHED is not set
+CONFIG_DEBUG_KMEMLEAK_MEM_POOL_SIZE=512000
+
