--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -304,3 +304,12 @@ CONFIG_SERIAL_8250_SHARE_IRQ=y
 CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_HAS_IOMEM=y
+CONFIG_NO_HZ_IDLE=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_ARM64_SW_TTBR0_PAN=y
+CONFIG_ARM64_LSE_ATOMICS=y
+CONFIG_ARM64_USE_LSE_ATOMICS=y
+CONFIG_JUMP_LABEL=y
+CONFIG_RANDOMIZE_BASE=y
+CONFIG_NUMA=y
+
