--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -129,7 +129,7 @@ CONFIG_REGULATOR_GPIO=y
 CONFIG_RC_CORE=y
 CONFIG_RC_DECODERS=y
 CONFIG_RC_DEVICES=y
-CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_SUPPORT=m
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
@@ -145,8 +145,8 @@ CONFIG_FB=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_SIMPLE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
-CONFIG_BACKLIGHT_PWM=y
-CONFIG_BACKLIGHT_LP855X=y
+CONFIG_BACKLIGHT_PWM=m
+CONFIG_BACKLIGHT_LP855X=m
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_ALOOP=y
@@ -312,4 +312,7 @@ CONFIG_ARM64_USE_LSE_ATOMICS=y
 CONFIG_JUMP_LABEL=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_NUMA=y
+CONFIG_MEGARAID_SAS=y
+CONFIG_DEBUG_KMEMLEAK_MEM_POOL_SIZE=512000
+CONFIG_ZSMALLOC=m
 
