--- a/bsp/nvidia-orin/nvidia-orin.cfg
+++ b/bsp/nvidia-orin/nvidia-orin.cfg
@@ -126,7 +126,7 @@ CONFIG_DW_WATCHDOG=y
 CONFIG_ARM_SMC_WATCHDOG=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_GPIO=y
-CONFIG_RC_CORE=y
+CONFIG_RC_CORE=m
 CONFIG_RC_DECODERS=y
 CONFIG_RC_DEVICES=y
 CONFIG_MEDIA_SUPPORT=m
@@ -149,16 +149,16 @@ CONFIG_BACKLIGHT_PWM=m
 CONFIG_BACKLIGHT_LP855X=m
 CONFIG_SOUND=y
 CONFIG_SND=y
-CONFIG_SND_ALOOP=y
-CONFIG_SND_HDA_TEGRA=y
-CONFIG_SND_HDA_CODEC_HDMI=y
+CONFIG_SND_ALOOP=m
+CONFIG_SND_HDA_TEGRA=m
+CONFIG_SND_HDA_CODEC_HDMI=m
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
-CONFIG_SND_SOC_TEGRA=y
-CONFIG_SND_SIMPLE_CARD=y
-CONFIG_SND_AUDIO_GRAPH_CARD=y
+CONFIG_SND_SOC_TEGRA=m
+CONFIG_SND_SIMPLE_CARD=m
+CONFIG_SND_AUDIO_GRAPH_CARD=m
 CONFIG_HIDRAW=y
-CONFIG_HID_MULTITOUCH=y
+CONFIG_HID_MULTITOUCH=m
 CONFIG_I2C_HID_OF=y
 CONFIG_USB_OTG=y
 CONFIG_USB_XHCI_HCD=y
@@ -315,4 +315,9 @@ CONFIG_NUMA=y
 CONFIG_MEGARAID_SAS=y
 CONFIG_DEBUG_KMEMLEAK_MEM_POOL_SIZE=512000
 CONFIG_ZSMALLOC=m
+CONFIG_VIDEO_OV5645=m
+CONFIG_XEN=y
+CONFIG_I2C_HID_ACPI=m
+CONFIG_I2C_HID_OF=m
+CONFIG_VIDEO_HANTRO=m
 
